socket io stuff added, not connected fully, need to send correct canvas data to server from client

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,4 +20,21 @@
         </div>
     </div>
 </div>
+
+<script src="/socket.io/socket.io.js"></script>
+<script>
+    
+        var socket = io();
+    
+    window.addEventListener('load', () => {
+        socket.on("hello", (arg) => {
+            console.log(arg);
+        });
+        setInterval(function(){
+            socket.emit("getLines", canvas.toDataURL());
+            console.log(canvasCtx);
+        }, 2500);
+        //setInterval(socket.on("sendlines", canvasCtx), 200);
+    });
+</script>
       
