--- a/views/index.hbs
+++ b/views/index.hbs
@@ -49,10 +49,10 @@
 
 
         //not so effective multilayer 
-        setInterval(function (e){
+        /*setInterval(function (e){
             //sending canvas as image to the server
             socket.emit("sendLinesToServer", canvas.toDataURL());
-        }, 700);
+        }, 700);*/
         
 
         //receive lines from the server
