--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <link rel="stylesheet" href="/stylesheets/layout.css">
+    <link rel="stylesheet" href="/stylesheets/utility.css">
+    <link rel="stylesheet" href="/stylesheets/fancy.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="/javascripts/canvas.js" defer></script>
   </head>
