--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,17 +2,47 @@ canvas {
     border: 1px solid black;
     margin: 0 auto;
     display: block;
-    border-radius: 16px;
+    border-radius: var(--border-radius);
+    background-color: var(--offwhite)
 }
 .controls {
-    max-width: 1280px;
-    width: 80vw;
-    margin: 0 auto;
-    background-color: grey;
-    border-radius: 16px;
-    display: flex;
-    justify-content: space-between;
-    padding: 1em 2em;
+    background-color: var(--inactive-blue);
+    border-radius: var(--border-radius);
+    padding: 1em 1em;
 }
-.brush__controls {}
-.color {}
+.user__chat {
+    border-radius: var(--border-radius);
+}
+.messages {
+    min-height: 350px;
+    max-height: 350px;
+    background-color: var(--dark-highlight);
+    color: var(--offwhite);
+    padding: var(--rg-padding);
+    list-style-type: none;
+    overflow-y: scroll;
+    border-top-left-radius: var(--border-radius);
+    border-top-right-radius: var(--border-radius);
+}
+.messages::-webkit-scrollbar {
+    width: var(--border-radius);
+}
+.messages::-webkit-scrollbar-track {
+    background: #a3a3a3;
+}
+.messages::-webkit-scrollbar-thumb {
+    background-color: #ffffff;
+    border-radius: var(--border-radius);
+    border: 6px solid #ffffff;
+}
+#message__input {
+    background-color: var(--active-blue);
+    color: var(--offwhite);
+    padding: 1rem;
+    width: 100%;
+    border-bottom-left-radius: var(--border-radius);
+    border-bottom-right-radius: var(--border-radius);
+}
+#message__input::placeholder {
+    color: var(--offwhite);
+}
