--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,6 +6,9 @@
     </div>
     <div class="quart v_col sbetween">
         <div class="controls">
+            <div class="controls__title">
+                <h3>Brush/Board Controls</h3>
+            </div>
             <div class="brush__controls">
                 <div class="brush__color" data-active="0">
                     <input type="color" id="brush__color" name="brush color"
