--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="/stylesheets/utility.css">
     <link rel="stylesheet" href="/stylesheets/fancy.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <script src="/javascripts/canvas.js" defer></script>
   </head>
   <body>
